--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,18 +9,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django + Tailwind CSS + Flowbite</title>
+    {% include "global.html" %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    
-
-
-
-
 </head>
 
+
+
 <body class="bg-green-50">
+    
+   
+    <!-- As a heading -->
+    <nav class="navbar text-s1 text-w1 bg-body-tertiary border-bottom py4">
+        <div class="container text-center">
+            <div class="row w-100">
+                <div class="col">
+                    <div class="container-fluid">
+                        <span class="navbar-brand mb-0 h1">Navbar</span>
+                    </div>
+                </div>
+                <div class="col-6 col-md-8 col-sm-12">
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link tbtn-def" href="/made-cover">Cover</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col ms-auto text-end">
+                    <button class="tbtn-def">Log in</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+    
+<!--Navbar-->
+
+<main>
     <div class="container mx-auto mt-4">
         {% block content %}
         {% endblock content %}
     </div>
+</main>
 </body>
 
 </html>
