--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
-{% extends "coverit/base.html" %}
+{% extends "_base.html" %}
 {% block content %}
 
-<h1 class="text-3xl font-bold underline">
+<h1 class="">
     Hello, Tailwind CSS!
 </h1>
 {% endblock content %}
