--- a/templates/coverit/base.html
+++ b/templates/coverit/base.html
@@ -1,28 +1,70 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% block title %}
-  
-  {% endblock title %}
+    <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" integrity="sha512-MqL4+Io386IOPMKKyplKII0pVW5e+kb+PI/I3N87G3fHIfrgNNsRpzIXEi+0MQC0sR9xZNqZqCYVcC61fL5+Vg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="{% static 'public/coverit/css/overriden-globe.css' %}" rel="stylesheet">
+       
   </head>
   <body>
-    <div id="root" class="d-flex vh-100 bg-body-secondary">
-    {% include "utility/sidebar.html" %}
-    <div class="flex-grow-1 d-flex flex-column">
-      {% include "utility/header.html" %}
-    <main class=" h-100 m-2 p-3">
-    {% block content %}
-    
-    {% endblock content %}
-    </main>
-  </div>
-  </div>
+    {% include "utility/coverit/navbar.html" %}
+  
+  
+  
+    <!--Navbar End-->
+    {% block content %}{% endblock content %}
+    {% include "utility/coverit/footer.html" %}
 
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+<!--Script for Animation-->
+<script type="text/javascript">
+  //Fade-animo
+  const messages = document.querySelectorAll('.fade-animo > *');
+        const displayTime = 3; // Time each message is displayed (in seconds)
+        const fadeTime = 1; // Time for fade in/out (in seconds)
+        const totalCycleTime = displayTime + (2 * fadeTime); // Total time for one message cycle
+
+        let currentIndex = 0;
+
+        // Function to show messages with cycle option
+        function showNextMessage(direction, infinite = true) {
+            // Hide all messages
+            messages.forEach((msg) => {
+                msg.style.opacity = '0';
+                msg.style.transform = direction === 'top' ? 'translateY(-100%)' : 'translateY(100%)';
+            });
+
+            // Show the current message
+            const currentMessage = messages[currentIndex];
+            currentMessage.style.opacity = '1';
+            currentMessage.style.transform = 'translateY(0)';
+
+            // Increment index for the next message
+            currentIndex = (currentIndex + 1) % messages.length;
+
+            // Set a timeout for fading out
+            setTimeout(() => {
+                currentMessage.style.opacity = '0';
+                currentMessage.style.transform = direction === 'top' ? 'translateY(-100%)' : 'translateY(100%)';
+            }, displayTime * 1000); // Show for displayTime seconds
+
+            // Set timeout for the next message
+            if (infinite || currentIndex < messages.length) {
+                setTimeout(() => showNextMessage(direction, infinite), totalCycleTime * 1000);
+            }
+        }
+
+        // Start the message cycle with desired direction ('top' or 'bottom')
+        showNextMessage('top', true); // Change 'top' to 'bottom' to animate from the bottom
+</script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
