--- a/templates/coverit/cover_create.html
+++ b/templates/coverit/cover_create.html
@@ -1,6 +1,8 @@
-{% extends "_base.html" %}
+{% extends "coverit/base.html" %}
 {% block content %}
-<form class=" shadow-sm py-3 border rounded p-4">
+<div class="container px-5 py-5  mx-5">
+  <form method="POST" style="background-color: rgb(108 101 101);" class=" shadow  mb-5  rounded p-4">
+  {% csrf_token %}
     <div class="mb-3">
       <label for="title" class="form-label">Cover title</label>
       {{form.title}}
@@ -10,6 +12,7 @@
       <label class="form-label text-w1">Content for letter*</label>
       {{form.contents}}
     </div>
-    <button type="submit" class="tbtn-def">Create Cover</button>
+    <button type="submit" class="btn btn-secondary border">Create Cover</button>
   </form>
+</div>
 {% endblock content %}
