--- a/templates/global.html
+++ b/templates/global.html
@@ -2,11 +2,13 @@
     @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
     :root{
         --bg-light1:#ececec;
+        --bg-white:#ffffff;
         --bc-1:#d6d4d4; /*bc: border-color*/
     }
     body{
         font-family:Rubik!important;
         font-weight: 100!important;
+ 
     }
     h1{
         color:red;
@@ -51,6 +53,44 @@
         padding: 0.525rem 0.425rem 0.525rem 0.425rem !important;
         box-sizing: border-box!important;
         overflow: hidden!important;
+    }
+    .t-btnorm{
+        background-color: #ffffff!important;
+        border:1px solid #d6d4d4!important;
+        color:inherit!important;
+        font-size:14px!important;
+        align-items:center!important;
+        justify-content: center!important;
+        text-align: center!important;
+        border-radius: 0.630rem!important;
+        padding: 0.525rem 0.425rem 0.525rem 0.425rem !important;
+        box-sizing: border-box!important;
+        overflow: hidden!important;
+        line-height:1.5;
+
+    }
+
+    .t-btnorm:hover{
+        background-color: #ececec!important;
+    }
+
+    .t-btnorm1{
+        background-color: #177373!important;
+        border:1px solid transparent!important;
+        color: #ffffff!important;
+        font-size:14px!important;
+        align-items:center!important;
+        justify-content: center!important;
+        text-align: center!important;
+        border-radius: 0.630rem!important;
+        padding-left:0.85rem!important;
+        padding-right:0.85rem!important;
+        padding-top:0.45rem!important;
+        padding-bottom:0.45rem!important;
+        box-sizing: border-box!important;
+        overflow: hidden!important;
+        line-height:1.5;
+
     }
 
     /*border:color, radius,*/
