50% Ready for launch

--- a/templates/coverit/index.html
+++ b/templates/coverit/index.html
@@ -19,8 +19,9 @@
                 <p class="fw-semibold fs-5 font-monospace mt-3">Tool's that productive ease.</p>
                 <div class="fade-animo fs-6 ">
                   <p>No account needed <i class="ri-check-double-line fs-5"></i></p>
+                  <p>No watermark <i class="ri-copyright-line fs-5"></i></p>
                   <p>Free to use <i class="ri-creative-commons-nc-line fs-5"></i></p>
-                  <p>Download as PDF <i class="ri-download-lin fs-5"></i></p>
+                  <p>Download as PDF <i class="ri-download-line fs-5"></i></p>
               </div>
               </div>
             </div>
