--- a/static/public/coverit/css/overriden-globe.css
+++ b/static/public/coverit/css/overriden-globe.css
@@ -1,5 +1,9 @@
+:root{
+    --body-bg-color:rgb(255, 255, 255);
+}
 body {
     font-family: Rubik;
+    background-color: var(--body-bg-color);
 }
 
 @keyframes gradient {
