--- a/templates/coverit/base.html
+++ b/templates/coverit/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load static %}
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="{% static 'public/coverit/css/overriden-globe.css' %}" rel="stylesheet">
-       
+       {% block head %}{% endblock head %}
   </head>
   <body>
     {% include "utility/coverit/navbar.html" %}
