--- a/templates/coverit/cover_create.html
+++ b/templates/coverit/cover_create.html
@@ -1,7 +1,27 @@
 {% extends "coverit/base.html" %}
+{% comment %} {% load breadcrumbs %} {% endcomment %}
+{% block head %}
+<style>
+  :root{
+    --body-bg-color:#b3b3b3a6!important;
+  }
+ 
+</style>
+{% endblock head %}
+
+
 {% block content %}
-<div class="container px-5 py-5  mx-5">
-  <form method="POST" style="background-color: rgb(108 101 101);" class=" shadow  mb-5  rounded p-4">
+<div class="container px-5 pt-5 mx-5">
+  <div class="d-flex justify-content-center align-items-center text-center shadow bg-light rounded mb-2 py-2" style="font-size: 0.940rem;">
+    <p class="mb-0">{{page1}}  &#8594; &nbsp; &nbsp;  &nbsp; </p> <!-- Use a big arrow -->
+    <p class="mb-0">{{page2}}  &#8594;  &nbsp;  &nbsp;  &nbsp; </p> <!-- Arrow here too -->
+    <p class="mb-0">{{page3}} &nbsp; </p>
+  </div>
+</div>
+
+
+<div class="container px-5 pb-5  mx-5">
+  <form method="POST" style="background-color: rgb(108 101 101);" class=" shadow bg-light  mb-5  rounded p-4">
   {% csrf_token %}
     <div class="mb-3">
       <label for="title" class="form-label">Cover title</label>
