--- a/templates/utility/coverit/footer.html
+++ b/templates/utility/coverit/footer.html
@@ -25,7 +25,7 @@
         <div class="col-lg-2 mb-3">
           <h5>Tools & Quick</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white text-decoration-none">Home</a></li>
+            <li><a href="{% url 'index' %}" class="text-white text-decoration-none">Home</a></li>
             <li><a href="#" class="text-white text-decoration-none">About</a></li>
             <li><a href="#" class="text-white text-decoration-none">Cover Letter</a></li>
             <li><a href="#" class="text-white text-decoration-none">Invoice & Billing</a></li>
