--- a/templates/utility/coverit/navbar.html
+++ b/templates/utility/coverit/navbar.html
@@ -6,7 +6,7 @@
            
         </a>
         <nav class="nav float-start">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
             <a class="nav-link" href="#">About</a>
             <a class="nav-link" href="#">Link</a>
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
