--- a/templates/error_pages/404.html
+++ b/templates/error_pages/404.html
@@ -23,7 +23,7 @@
     <h1 class="text-center fs-1">404<h1>
       <p class="text-center fs-5">Page is not found.</p>
      
-        <button type="button" class="text-center btn btn-primary btn-sm" href="{% url 'index' %}">back Home</button>
+        <a type="button" class="text-center btn btn-primary btn-sm" href="{% url 'index' %}">Back Home</a>
     
 
    </div>
