--- a/templates/utility/coverit/footer.html
+++ b/templates/utility/coverit/footer.html
@@ -44,4 +44,10 @@
         </div>
       </div>
     </div>
+    <div class="d-flex">
+      <div class=""></div>
+      <div class="p-2">
+        <a class="text-unset text-decoration-none" href="">Hire this project developer</a>
+      </div>
+    </div>
   </footer>
