--- a/templates/utility/coverit/navbar.html
+++ b/templates/utility/coverit/navbar.html
@@ -13,11 +13,14 @@
         </nav>
         <div class="float-end">
             {% if request.user.is_authenticated %}
+            <a href="{% url 'cover_listing' %}" type="button" class="btn btn-primary btn-sm">Admin</a>
+            {% if user.is_superuser %}
+            {% endif %}
             <a href="{% url 'cover_listing' %}" type="button" class="btn btn-primary btn-sm">Your Letter's</a>
-            <a type="button" class="btn btn-secondary btn-sm">Sign-out</a>
+            <a type="button" class="btn btn-secondary btn-sm" href="{% url 'accounts:logout' %}">Log-out</a>
             {% else %}
-            <button type="button" class="btn btn-secondary btn-sm">Sign-up</button>
-            <button type="button" class="btn btn-secondary btn-sm">Login</button>
+            <a type="button" class="btn btn-secondary btn-sm">Sign-up</a>
+            <a type="button" class="btn btn-secondary btn-sm" href="{% url 'accounts:login' %}" >Login</a>
             {% endif %}
         </div>
     </div>
