--- a/templates/coverit/base.html
+++ b/templates/coverit/base.html
@@ -68,5 +68,7 @@
         showNextMessage('top', true); // Change 'top' to 'bottom' to animate from the bottom
 </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> 
+
+</body>
 </html>
