--- a/templates/utility/coverit/footer.html
+++ b/templates/utility/coverit/footer.html
@@ -47,7 +47,7 @@
     <div class="d-flex">
       <div class=""></div>
       <div class="p-2">
-        <a class="text-unset text-decoration-none" href="">Hire this project developer</a>
+        <a style="font-size:13px;" class="text-white  text-decoration-none"  disabled href="">Hire me! dev@ardhweb</a>
       </div>
     </div>
   </footer>
