added products and pages
pirvay polices ,about us pages , password generator minial function

--- a/templates/utility/coverit/footer.html
+++ b/templates/utility/coverit/footer.html
@@ -23,10 +23,10 @@
   
         <!-- Third Flex Item: Tools -->
         <div class="col-lg-2 mb-3">
-          <h5>Tools & Quick</h5>
+          <h5>Quick</h5>
           <ul class="list-unstyled">
             <li><a href="{% url 'index' %}" class="text-white text-decoration-none">Home</a></li>
-            <li><a href="#" class="text-white text-decoration-none">About</a></li>
+            <li><a href="{% url 'about' %}" class="text-white text-decoration-none">About</a></li>
             <li><a href="#" class="text-white text-decoration-none">Cover Letter</a></li>
             <li><a href="#" class="text-white text-decoration-none">Invoice & Billing</a></li>
           </ul>
@@ -36,7 +36,7 @@
         <div class="col-lg-2 mb-3">
           <h5>Helps</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white text-decoration-none">Privacy</a></li>
+            <li><a href="{% url 'privacy-polices' %}" class="text-white text-decoration-none">Privacy</a></li>
             <li><a href="#" class="text-white text-decoration-none">Ads</a></li>
             <li><a href="#" class="text-white text-decoration-none">Buy us Coffae</a></li>
             <li><a href="#" class="text-white text-decoration-none">Data</a></li>
@@ -47,7 +47,7 @@
     <div class="d-flex">
       <div class=""></div>
       <div class="p-2">
-        <a style="font-size:13px;" class="text-white  text-decoration-none"  disabled href="">Hire me! dev@ardhweb</a>
+        <a href="https://github.com/Ardhweb" style="font-size:13px;" class="text-white  text-decoration-none"  disabled href="">Hire me! dev@ardhweb</a>
       </div>
     </div>
   </footer>
