--- a/templates/utility/coverit/footer.html
+++ b/templates/utility/coverit/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="bg-dark text-light py-5 px-3" >
+<footer class="bg-dark text-light py-5 px-3 mt-auto bd-footer py-4 py-md-5 mt-5" >
     <div class="container">
       <div class="row d-flex justify-content-between">
         <!-- First Flex Item: Logo and All Rights Reserved -->
