--- a/templates/utility/coverit/navbar.html
+++ b/templates/utility/coverit/navbar.html
@@ -34,7 +34,7 @@
                       <p class="text-sm text-muted mb-3 text-wrap">Below using you  can schedule task , daily routine , project timeline and dealine plans and keep track activity.</p>
               
                       <ul class="list-unstyled">
-                        <li><a class="dropdown-item" href="">Timeline Dashboard</a></li>
+                        <li><a class="dropdown-item" href="{% url 'timeline:list_task' %}">My Task</a></li>
                         <li><a class="dropdown-item " href="{% url 'timeline:create_task' %}">Task Create</a></li>
                         
                       </ul>
