--- a/templates/coverit/base.html
+++ b/templates/coverit/base.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock title %}</title>
+     <meta name="description" content="Discover the best free daily prodactivity  and utitlity tools free of cost like file convereters, password and letter generators,  daily task tracker with schedule task and more.">
+    <meta name="keywords" content="Image to  Pdf  convereter, password generator free, cover letter , timeline , daily task ,routine tracker">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" integrity="sha512-MqL4+Io386IOPMKKyplKII0pVW5e+kb+PI/I3N87G3fHIfrgNNsRpzIXEi+0MQC0sR9xZNqZqCYVcC61fL5+Vg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,10 +67,32 @@
   scrollbar-color:rgb(226, 226, 226) #f0f0f0; /* Thumb color and track color */
 }
 
+.card-ui-color {
+  position: relative;
+  57, 53, 0));
+  background: linear-gradient(to bottom, rgb(53 60 229 / 80%), rgba(229, 57, 53, 0));
+}
+
+/* Adding an overlay image with low opacity */
+.card-ui-color::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('your-image-url.jpg'); /* Replace with your image URL */
+  background-size: cover; /* Ensure the image covers the entire area */
+  background-position: center; /* Keep the image centered */
+  opacity: 0.2; /* Low opacity for the image */
+  pointer-events: none; /* Disable interactions with the overlay image */
+}
+
+
     </style>
     {% block head %}{% endblock head %}
   </head>
-  <body>
+  <body class="">
     {% include "utility/coverit/navbar.html" %}
   
   
