--- a/templates/timeline/list.html
+++ b/templates/timeline/list.html
@@ -1,9 +1,35 @@
-{% extends "_base.html" %}
+{% extends "coverit/base.html" %}
 
 {% block content %}
-<div class="d-flex justify-content-center  flex-column align-items-center vh-100">
-{% for objs in objs  %}
-<p>{{objs.id}}:{{objs.name}}</p>
-{% endfor %}
-</div>
+
+<div class="container mb-5 py-md-5">
+    <div class="row">
+    {% for task in anchor  %}
+      <!-- Card 1 -->
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 gap-2 m-2">
+        <div class="card card-ui-color shadow-lg " style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">{{forloop.counter}}. {{task.name}}</h5>
+            <!-- List with Checkboxes -->
+             
+            <ul class="list-group list-group-flush">
+              {% for item in task.listitem_set.all %}
+                <li class="list-group-item bg-transparent">
+                  <input type="checkbox" id="checkbox{{ item.id }}" {% if item.done %}checked{% endif %}>
+                  <label for="checkbox{{ item.id }}">{{ item.name }}</label>
+                </li>
+              {% endfor %}
+            </ul>
+  
+            <a href="{% url "timeline:task_add" id=task.id %}" class="text-white btn btn-dark btn-sm">Edit</a>
+            <a href="#" class="text-white  btn btn-danger btn-sm">Delete</a>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+  
+      <!-- Add more cards as needed -->
+    </div>
+  </div>
+  
 {% endblock content %}
