--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,9 +22,13 @@
             <button type="submit" class="btn  btn-secondary btn-sm w-100">Login</button>
         </form>
         <div class="text-center mt-3">
+            <a href="{% url "index" %}">Back Home</a>  | 
+            
             <a href="#">Forgot password?</a>
         </div>
+        
     </div>
 </div>
+
 {% endblock content %}
     
