--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -45,7 +45,7 @@
       
       <button type="submit" class="btn btn-dark w-100 mt-3">Sign Up</button>
     </form>
-
+{% comment %} 
     <div class="d-flex align-items-center my-4">
       <hr class="flex-grow-1" />
       <span class="mx-2">or</span>
@@ -57,6 +57,8 @@
      <span class="fs-5 lh-3">Login with Google</span>
       </a>
     </div>
+
+     {% endcomment %}
 
 
   </div>
