Adjust Text Desc

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,5 +1,8 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% block title %}
+Home
+{% endblock title %}
 {% block content %}
      
     <!--Hero Section-->
@@ -123,7 +126,7 @@
            <!-- Right Column (Text, Left-Aligned) -->
            <div class="col-md-6 text-start py-5">
                <h3 class="mb-3 hero-text-2 fs-3">Invoice & <br> <strong>Inventory Management</strong></h3>
-               <p class="text-1">Convert, format, and edit files effortlessly! From PDF to Word, JPG to PNG, SVG editing, file merging, and more—our AI-powered tools simplify your workflow. Try free tools or unlock premium features for maximum productivity!</p>
+               <p class="text-1">Manage your <strong>inventory</strong> and generate <strong>free invoices with customizable templates</strong>. Automate calculations, track supplies, and integrate seamlessly with your website or with our dedicated page for more details.</p>
                
            </div>
        </div>
