--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -9,7 +9,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav me-auto">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="#pricing">Pricing</a>
                 <div class="dropdown nav-link ">
                     <a class="dropdown-toggle text-decoration-none text-reset " type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,7 +56,7 @@
                                 <li><h6 class="dropdown-header  text-uppercase">Writing & Personlized</h6></li>
     
                                 <li>
-                                    <a class="dropdown-item d-flex align-items-start" href="#">
+                                    <a class="dropdown-item d-flex align-items-start" href="{% url "create_cover" %}">
                                        
 <svg class="me-2 lh-sm" id="dynamic-svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="0.8" stroke-linecap="round" stroke-linejoin="round">
 <rect width="24" height="24" rx="2" ry="2" fill="#8e44ad"/>
@@ -80,8 +80,13 @@
                   <!--Custom Dropdown-->
             </div>
             <div class="d-flex">
-                <a href="#" class="btn btn-outline-body  me-2 rounded">Login</a>
-                <a href="#" class="btn btn-primary rounded px-3 btn1">Sign Up</a>
+                {% if request.user.is_authenticated %}
+                <a  class="me-2 btn rounded">Welcome, <span class="">{{user.first_name}}</span></a>
+                <a href="{% url 'accounts:logout' %}" class="btn btn-outline-danger  me-2 rounded">Logout</a>
+                {% else %}
+                <a href="{% url 'accounts:login' %}" class="btn btn-outline-body  me-2 rounded">Login</a>
+                <a href="{% url "accounts:register" %}" class="btn btn-primary rounded px-3 btn1">Sign Up</a>
+                {% endif %}
             </div>
         </div>
     </div>
